Fix invisible button text for hx-indicator in dark mode (#3353)
Without this, in dark mode the [hx-indicator](https://htmx.org/attributes/hx-indicator/) demo button has white text on white background. Switching to `Canvas` means the button background will be black in dark mode.

This is a similar fix to #2719, though we can’t use `primary` here as it would make the indicator "bars.svg" image almost invisible.

--- a/www/themes/htmx-theme/static/css/site.css
+++ b/www/themes/htmx-theme/static/css/site.css
@@ -402,7 +402,7 @@ tbody > tr > th[scope="rowgroup"] {
   padding: 1em;
   letter-spacing: .1em;
   text-transform: uppercase;
-  background: white;
+  background: Canvas;
   border: solid;
   cursor:pointer;
   border-radius: 8px;
